<resources>
    <string name="app_name">Beach Watchers</string>
    <string name="slogan">around you</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="birds">birds are watching you</string>
    <string name="mess">Not working</string>
    <string name="setts">Settings</string>
    <string name="textoLargo">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.
Surfaces and edges of the material provide visual cues that are grounded in reality. The use of familiar tactile attributes helps users quickly understand affordances. Yet the flexibility of the material creates new affordances that supersede those in the physical world, without breaking the rules of physics. The fundamentals of light, surface, and movement are key to conveying how objects move, interact, and exist in space and in relation to each other. </string>
    <string name="configuracion">Configuration</string>
    <string name="registro">Sign In</string>
    <string name="no_eres_usuario_registrate">¿Are you not register? Register now!</string>
    <string name="sand">SAND</string>
    <string name="watah">WATER</string>
</resources>