<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    style="@style/Layout_Match_Match"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".WMainActivity">

    <FrameLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/backgroundHeader"
            style="@style/Layout_Wrap_Wrap"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/beachback"
            />

        <FrameLayout
            android:id="@+id/scrim"
            style="@style/Layout_Match_Match"
            android:background="@drawable/scrim">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/headerContent"
            style="@style/Layout_Match_Match"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logobird"
                app:civ_border_color="#EEE"
                app:civ_border_width="0dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#FFF"
                app:civ_shadow_radius="0" />

            <TextView
                android:id="@+id/headerText"
                style="@style/Layout_Wrap_Wrap"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/frenchy"
                android:text="@string/birds"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                app:fontFamily="sans-serif" />
        </LinearLayout>

    </FrameLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvContent"
            style="@style/Layout_Wrap_Wrap"
            android:singleLine="false"
            android:text="@string/textoLargo" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/btnStay"
            style="@style/Layout_Wrap_Wrap"
            android:layout_weight="1"
            android:background="@drawable/button_state"
            android:text="@string/watah"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnLeave"
            style="@style/Layout_Wrap_Wrap"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/sand"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</LinearLayout>